# quiz-app

./: .gitignore  LICENSE  README.md  docker-compose.yml  env.sample  wrapper.sh
django/: Dockerfile  README.md  execute.sh  pyproject.toml  tester.sh
django/app/: .coveragerc  manage.py
django/app/account/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
django/app/account/migrations/: 0001_initial.py  0002_alter_individualgroup_options_and_more.py  0003_alter_user_friends.py  0004_alter_individualgroup_name.py
django/app/app_tests/: __init__.py  conftest.py  factories.py
django/app/app_tests/account_tests/: model_test.py  test_forms.py  test_models.py  test_validators.py  test_views.py  validators_test.py
django/app/app_tests/integration_tests/: __init__.py  conftest.py  test_account_template.py  test_channels_liveserver.py  test_quiz_template.py
django/app/app_tests/passkey_tests/: __init__.py  conftest.py  test_backends.py  test_forms.py  test_models.py  test_views.py
django/app/app_tests/quiz_tests/: conftest.py  test_consumers.py  test_forms.py  test_models.py  test_validators.py  test_views.py
django/app/app_tests/tags_tests/: test_custom_tags.py  test_room_tags.py
django/app/app_tests/utils_tests/: model_test.py  test_commands.py  test_models.py  test_views.py  test_widgets.py
django/app/config/: asgi.py  define_module.py  urls.py
django/app/config/settings/: base.py  development.py  production.py
django/app/passkey/: admin.py  backend.py  forms.py  models.py  urls.py  views.py
django/app/passkey/migrations/: 0001_initial.py  0002_alter_userpasskey_credential_id.py  0003_alter_userpasskey_credential_id_and_more.py
django/app/quiz/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  validators.py  views.py
django/app/quiz/migrations/: 0001_initial.py  0002_alter_quiz_answer.py  0003_alter_genre_options_alter_quiz_options_and_more.py  0004_alter_score_options_remove_score_count_and_more.py  0006_quizroom_use_typewriter_effect.py  (+1 more)
django/app/templates/: 400.html  403.html  404.html  405.html  500.html  base.html  breadcrumbs.html  delete_modal_form.html  err_base.html  footer.html  header.html  index.html  introduction.html
django/app/utils/: forms.py  models.py  urls.py  views.py  widgets.py
(+108 files in other folders)
